--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -37,6 +37,7 @@
         android:drawableLeft="@drawable/ic_person"
         android:text="@string/play_person"
         android:textSize="20sp"
+        android:textAllCaps="false"
         app:backgroundTint="@color/primaryBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,6 +54,7 @@
         android:contentDescription="@string/play_computer"
         android:drawableLeft="@drawable/ic_computer"
         android:text="@string/play_computer"
+        android:textAllCaps="false"
         android:textSize="20sp"
         app:backgroundTint="@color/primaryBtn"
         app:layout_constraintEnd_toEndOf="parent"
