--- a/app/src/main/res/drawable/av_bangs.xml
+++ b/app/src/main/res/drawable/av_bangs.xml
@@ -4,33 +4,33 @@
     android:viewportWidth="213"
     android:viewportHeight="207">
   <path
-      android:pathData="M106.5,100.5m-100.5,0a100.5,100.5 0,1 1,201 0a100.5,100.5 0,1 1,-201 0"
-      android:fillColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M106.5 0A100.5 100.5 0 1 0 106.5 201 100.5 100.5 0 1 0 106.5 0z"/>
   <path
-      android:pathData="M85,45L128,45A66,66 0,0 1,194 111L194,141A66,66 0,0 1,128 207L85,207A66,66 0,0 1,19 141L19,111A66,66 0,0 1,85 45z"
-      android:fillColor="#EBD3BE"/>
+      android:fillColor="#FFEBD3BE"
+      android:pathData="M19 111c0-36.45 29.55-66 66-66h43c36.45 0 66 29.55 66 66v30c0 36.45-29.55 66-66 66h-43c-36.45 0-66-29.55-66-66z"/>
   <path
-      android:pathData="M194,146m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
-      android:fillColor="#EBD3BE"/>
+      android:fillColor="#FFEBD3BE"
+      android:pathData="M194 127A19 19 0 1 0 194 165 19 19 0 1 0 194 127z"/>
   <path
-      android:pathData="M19,146m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
-      android:fillColor="#EBD3BE"/>
+      android:fillColor="#FFEBD3BE"
+      android:pathData="M19 127A19 19 0 1 0 19 165 19 19 0 1 0 19 127z"/>
   <path
-      android:pathData="M69,133C69,133.788 68.845,134.568 68.543,135.296C68.242,136.024 67.8,136.685 67.243,137.243C66.686,137.8 66.024,138.242 65.296,138.543C64.568,138.845 63.788,139 63,139C62.212,139 61.432,138.845 60.704,138.543C59.976,138.242 59.314,137.8 58.757,137.243C58.2,136.685 57.758,136.024 57.457,135.296C57.155,134.568 57,133.788 57,133L63,133H69Z"
-      android:fillColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M69 133c0 0.79-0.16 1.57-0.46 2.3-0.3 0.72-0.74 1.38-1.3 1.94-0.55 0.56-1.22 1-1.94 1.3-0.73 0.3-1.51 0.46-2.3 0.46-0.79 0-1.57-0.16-2.3-0.46-0.72-0.3-1.39-0.74-1.94-1.3-0.56-0.56-1-1.22-1.3-1.94-0.3-0.73-0.46-1.51-0.46-2.3h6 6Z"/>
   <path
-      android:pathData="M157,133C157,134.591 156.368,136.117 155.243,137.243C154.117,138.368 152.591,139 151,139C149.409,139 147.883,138.368 146.757,137.243C145.632,136.117 145,134.591 145,133L151,133H157Z"
-      android:fillColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M157 133c0 1.6-0.63 3.12-1.76 4.24-1.12 1.13-2.65 1.76-4.24 1.76-1.6 0-3.12-0.63-4.24-1.76-1.13-1.12-1.76-2.65-1.76-4.24h6 6Z"/>
   <path
-      android:pathData="M138,146C138,153.691 134.945,161.068 129.506,166.506C124.068,171.945 116.691,175 109,175C101.309,175 93.933,171.945 88.494,166.506C83.055,161.068 80,153.691 80,146L109,146H138Z"
-      android:fillColor="#CD8A8A"/>
+      android:fillColor="#FFCD8A8A"
+      android:pathData="M138 146c0 7.7-3.06 15.07-8.5 20.5-5.43 5.44-12.8 8.5-20.5 8.5-7.7 0-15.07-3.06-20.5-8.5-5.44-5.43-8.5-12.8-8.5-20.5h29 29Z"/>
   <path
-      android:pathData="M42,149.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
-      android:fillColor="#FBBFBF"/>
+      android:fillColor="#FFFBBFBF"
+      android:pathData="M52.5 146A10.5 3.5 0 1 0 52.5 153 10.5 3.5 0 1 0 52.5 146z"/>
   <path
-      android:pathData="M156,149.5a10.5,3.5 0,1 0,21 0a10.5,3.5 0,1 0,-21 0z"
-      android:fillColor="#FBBFBF"/>
+      android:fillColor="#FFFBBFBF"
+      android:pathData="M166.5 146A10.5 3.5 0 1 0 166.5 153 10.5 3.5 0 1 0 166.5 146z"/>
   <path
-      android:pathData="M184,45H28V114H184V45Z"
-      android:fillColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M184 45H28v69h156V45Z"/>
 </vector>
