added rocket ship animation

--- a/app/src/main/res/layout/fragment_game_type.xml
+++ b/app/src/main/res/layout/fragment_game_type.xml
@@ -26,7 +26,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+        <ImageView
+            android:id="@+id/rocket"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:rotation="45"
+            android:translationX="-100dp"
+            android:translationY="50dp"
+            android:src="@drawable/ic_rocket"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </ImageView>
+
+        <Button
         android:id="@+id/btnPlayPerson"
         android:layout_width="290dp"
         android:layout_height="80dp"
