preparing to publish for internal testing
summary:
- renamed package
- modified app/proguard-rules.pro per google play suggestion
- modified gradle.properties & added android.enableR8.fullMode=true per google play suggestion

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -164,7 +164,7 @@
         </LinearLayout>
 
 
-        <com.example.dotsboxes.Views.GameView
+        <com.startechies.dotsboxes.Views.GameView
             android:id="@+id/gameView"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
